woohoo! baby's fist minimap.

--- a/minimap.css
+++ b/minimap.css
@@ -3,14 +3,16 @@
     -webkit-transition: opacity 0.2s linear;
     z-index: 9999;
     width: 200px;
-    height: 200px;
     background-color: #000;
     position: fixed;
     right: 16px;
     top: 16px;
+    display: none;
 }
 
-#canvas-box {
+#canvas-box canvas {
+    width: 200px;
+    height: auto;
 }
 
 #minimap:hover {
