--- a/minimap.css
+++ b/minimap.css
@@ -7,6 +7,11 @@
     right: -160px;
     top: 16px;
     display: none;
+
+    -moz-user-select: none; 
+    -khtml-user-select: none; 
+    -webkit-user-select: none; 
+    -o-user-select: none; 
 }
 
 #viewport {
