--- a/minimap.css
+++ b/minimap.css
@@ -15,22 +15,20 @@
 }
 
 #viewport {
-    opacity: 0.2;
-    background-color:#999;
+    opacity: 0.0;
     position: absolute;
-    border: 2px solid #000;
+    background-color: #999;
+    border: 2px solid black;
 }
 
 #viewport:hover {
     cursor: pointer;
 }
 
-/*#minimap, #canvas-box canvas {*/
-#minimap {
+#minimap, #canvas-box canvas {
     width: 200px;
     height: auto;
 }
-
 /*
 #minimap:hover {
     opacity:1.0;
